fix: Remove delta usage for now to avoid frame jumps

--- a/public/index.css
+++ b/public/index.css
@@ -111,6 +111,9 @@ menu {
   height: fit-content;
   width: fit-content;
   justify-self: end;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 nav {
